// Inventory Management System ERD

// Table: Users
Table users {
  user_id int [pk]
  user_name varchar(50) [not null]
  email varchar(100) [unique, not null]
  user_password varchar(255) [not null]
  user_role varchar(20) [not null]
  created_at timestamp [default: CURRENT_TIMESTAMP]
}

// Table: Categories
Table categories {
  category_id serial [pk]
  category_name varchar(100) [unique, not null]
  category_description text
  created_at timestamp [default: CURRENT_TIMESTAMP]
}

// Table: Products
Table products {
  product_id serial [pk]
  product_name varchar(150) [not null]
  product_price decimal(10,2) [not null]
  product_size varchar(10) [not null]
  category_id int [not null]
  stock_quantity int [not null]
  is_active boolean [default: true]
  created_at timestamp [default: CURRENT_TIMESTAMP]
  updated_at timestamp [default: CURRENT_TIMESTAMP]
}

// Table: Orders
Table orders {
  order_id serial [pk]
  user_id int [not null]
  product_id int [not null]
  quantity int [not null]
  order_status varchar(20) [default: 'PENDING']
  created_at timestamp [default: CURRENT_TIMESTAMP]
  approved_at timestamp
  approved_by int
}

// Relationships
Ref: users.user_id < orders.user_id
Ref: products.product_id < orders.product_id
Ref: categories.category_id < products.category_id
